<resources>
    <string name="adjust">Adjust</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alreadydownload">Added</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Collage Maker</string>
    <string name="app_rate_msg">Your 5-Stars are best gift and encourage for us. We are so honored with your support. And we will do our best to improve your experience. Thanks for your love!</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="basic_align">Align</string>
    <string name="basic_shadow">Shadow</string>
    <string name="basic_space">Space</string>
    <string name="basic_stroke">Stroke</string>
    <string name="basic_underline">Underline</string>
    <string name="batmobi_btn_action">download</string>
    <string name="bodyshaper_radius">Radius</string>
    <string name="bodyshaper_strength">Strength</string>
    <string name="bordersbar_corner">Corner</string>
    <string name="bordersbar_inner">Inner</string>
    <string name="bordersbar_outer">Outer</string>
    <string name="bordersbar_rotation">Rotation</string>
    <string name="bottom_Bg">Bg</string>
    <string name="bottom_Stroke">Stroke</string>
    <string name="bottom_add">Add</string>
    <string name="bottom_background">Background</string>
    <string name="bottom_beauty">Beauty</string>
    <string name="bottom_blur">Blur</string>
    <string name="bottom_bodyshaper">Shaper</string>
    <string name="bottom_crop">Crop</string>
    <string name="bottom_curve">Curve</string>
    <string name="bottom_editor">Editor</string>
    <string name="bottom_effect">Effect</string>
    <string name="bottom_filter">Filter</string>
    <string name="bottom_frame">Frame</string>
    <string name="bottom_glitch">Glitch</string>
    <string name="bottom_layout">Layout</string>
    <string name="bottom_leak">Leak</string>
    <string name="bottom_masic">Masic</string>
    <string name="bottom_mosaic">Mosaic</string>
    <string name="bottom_ratio">Ratio</string>
    <string name="bottom_scene">Scene</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_single_filter">Filter</string>
    <string name="bottom_single_horizontal">FlipH</string>
    <string name="bottom_single_rotate">Rotate</string>
    <string name="bottom_single_vertical">FlipV</string>
    <string name="bottom_slimbody">SlimBody</string>
    <string name="bottom_snap">Snap</string>
    <string name="bottom_space">Space</string>
    <string name="bottom_splash">Splash</string>
    <string name="bottom_square">Square</string>
    <string name="bottom_sticker">Sticker</string>
    <string name="bottom_stretch">Stretch</string>
    <string name="bottom_text">Text</string>
    <string name="button_sure">Sure</string>
    <string name="camera">Camera</string>
    <string name="canceldialog">CANCEL</string>
    <string name="channel">google</string>
    <string name="chip_text">Chip text</string>
    <string name="click_change_color">Click to Change Color</string>
    <string name="cn_1719214265946325169">ttZv</string>
    <string name="cn_3233797867769894038">Lz</string>
    <string name="cn_3558379473330497217">474</string>
    <string name="cn_7560710149464189166">321</string>
    <string name="cn_hs_fi_fyywngzynts">Ad</string>
    <string name="cn_hs_hs_mx_cod_bkdo">Rate</string>
    <string name="cn_hs_hs_mx_cod_poonlkmu">FeedBack</string>
    <string name="cn_hs_kjjigfhp_ynyqj">Please select the problem you think or write your suggestion</string>
    <string name="cn_hs_mfaj_hwfxm">   Have crash</string>
    <string name="cn_hs_nsuzy_mnsy_ynu">   Please input your suggest</string>
    <string name="cn_hs_rfsd_fix">   Have ads</string>
    <string name="cn_hs_sty_jfxd_ytzxj">   Not easy to use</string>
    <string name="cn_hs_wfyj_htsyjsy">Your 5-Stars are best gift and encourage\nfor us.We are a tiny team and we will do \nour best to improve your experience.\nThanks for your love and support!</string>
    <string name="cn_hs_wfyj_ynyqj">Please give it 5 stars</string>
    <string name="cn_n2847425182511604823">95</string>
    <string name="cn_n8495161939045709704">p83</string>
    <string name="collage_radio_hav">Landscape</string>
    <string name="collage_radio_vah">Portrait</string>
    <string name="com_exit_message">Recommend For You</string>
    <string name="content">Content</string>
    <string name="crop_abao">Abao</string>
    <string name="crop_amaro">Gloss</string>
    <string name="crop_brannan">Drama</string>
    <string name="crop_fennen">Pink</string>
    <string name="crop_free">Free</string>
    <string name="crop_goldenratio">Golden</string>
    <string name="crop_heibai">B&amp;W</string>
    <string name="crop_hudson">Icy</string>
    <string name="crop_kelvin">Alone</string>
    <string name="crop_landiao">Blues</string>
    <string name="crop_lofi">Agx100</string>
    <string name="crop_lomo">Lomo</string>
    <string name="crop_nofilter">Original</string>
    <string name="crop_origin">Origin</string>
    <string name="crop_qingxin">Pure</string>
    <string name="crop_ratio__16_9">16:9</string>
    <string name="crop_ratio__1_1">1:1</string>
    <string name="crop_ratio__3_4">3:4</string>
    <string name="crop_ratio__4_3">4:3</string>
    <string name="crop_ratio__9_16">9:16</string>
    <string name="crop_ratio_free">Free</string>
    <string name="crop_ratio_gold">Golden</string>
    <string name="crop_ratio_original">Origin</string>
    <string name="crop_rixi">Fresh</string>
    <string name="crop_weimei">Beauty</string>
    <string name="crop_xiaozhen">Country</string>
    <string name="crop_y1970">1970s</string>
    <string name="cute">Cute</string>
    <string name="data_error">Data Error</string>
    <string name="default_web_client_id">498272752533-giucg73o3ve9qp796fp26eup1udou408.apps.googleusercontent.com</string>
    <string name="delete">delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_message">sure to delete?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_prompt">Prompt</string>
    <string name="dialog_snap_message">Remove the text?</string>
    <string name="dialog_tag_message">Remove the tag?</string>
    <string name="dialogtitle">Would you like to save image?</string>
    <string name="dlg_processing">Processing</string>
    <string name="download_failure">Network unavailable</string>
    <string name="downloaded">Downloaded</string>
    <string name="editorbar_crop">Crop</string>
    <string name="editorbar_horizontal">Hflip</string>
    <string name="editorbar_left">Left</string>
    <string name="editorbar_right">Right</string>
    <string name="editorbar_vertical">Vflip</string>
    <string name="editorview_back_ad_dap" />
    <string name="editorview_banner_ad_batmobi" />
    <string name="editorview_banner_ad_dap" />
    <string name="editorview_banner_ad_fb" />
    <string name="editorview_banner_ad_kika" />
    <string name="effect_adjust_rotation">Rotation</string>
    <string name="effect_adjust_strength">Strength</string>
    <string name="effect_blend">Blend</string>
    <string name="effect_grain">grain</string>
    <string name="effect_halo">halo</string>
    <string name="effect_leak">leak</string>
    <string name="effect_manager">effect manager</string>
    <string name="effect_raindrop">raindrop</string>
    <string name="effect_spot">spot</string>
    <string name="effect_swatches">swatches</string>
    <string name="effect_weahter">weather</string>
    <string name="email">Email</string>
    <string name="emoji">Emoji</string>
    <string name="emoji2">Emoji2</string>
    <string name="exchangeimage">Please select a picture to be exchanged</string>
    <string name="exit">Exit</string>
    <string name="exit_app">Tap again to exit app!</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook">Facebook</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="feed_us">Feedback</string>
    <string name="filter">Filter</string>
    <string name="gcm_defaultSenderId">498272752533</string>
    <string name="glitch">Glitch</string>
    <string name="heart">Love</string>
    <string name="heart2">Heart</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home">Home</string>
    <string name="home_camera">Camera</string>
    <string name="home_collage">Collage</string>
    <string name="home_gallery">Gallery</string>
    <string name="home_rateus">Rate Us</string>
    <string name="home_snap">Snap</string>
    <string name="instagram">Instagram</string>
     <string name="lib_album">Album</string>
    <string name="lib_back">back</string>
    <string name="lib_confirm">Confirm</string>
    <string name="libui_barview_title_blur">Blur</string>
    <string name="libui_barview_title_bodyshaper">Enlarger</string>
    <string name="libui_barview_title_crop">Crop</string>
    <string name="libui_barview_title_curve">Curve</string>
    <string name="libui_barview_title_editor">Editor</string>
    <string name="libui_barview_title_effect">Effect</string>
    <string name="libui_barview_title_filter">Filter</string>
    <string name="libui_barview_title_mosaic">Mosaic</string>
    <string name="libui_barview_title_scene">Scene</string>
    <string name="libui_barview_title_slimebody">Slim Body</string>
    <string name="libui_barview_title_splash">Splash</string>
    <string name="libui_barview_title_square">Square</string>
    <string name="libui_barview_title_stretchleg">Stretch</string>
    <string name="libui_curvemode_brighten">Brighten</string>
    <string name="libui_curvemode_darken">Darken</string>
    <string name="libui_curvemode_fupian">Negative</string>
    <string name="libui_curvemode_hardcontrast">H Contrast</string>
    <string name="libui_curvemode_middlecontrast">M Contrast</string>
    <string name="libui_curvemode_reset">Reset</string>
    <string name="libui_curvemode_softcontrast">S Contrast</string>
    <string name="libui_effect_store_add">More</string>
    <string name="libui_ols_download_btn_apply">Apply</string>
    <string name="libui_ols_download_btn_download">Free</string>
    <string name="libui_ols_download_btn_downloading">Downloading...</string>
    <string name="libui_ols_download_btn_error">Error,please try again</string>
    <string name="libui_ols_title_effect">Effect</string>
    <string name="libui_tipswindow_message_bodyshaper">Gently tap to your eyes &amp; Drag the progress bar</string>
    <string name="libui_tipswindow_message_slimebody">Gently push the position you want to re-shape</string>
    <string name="libui_tipswindow_message_stretchleg">Set the line to right position &amp; Drag the progress bar</string>
    <string name="libui_tipswindow_ok">OK</string>
    <string name="loadPicFailure">Load Picture Failure!</string>
    <string name="longclickprompt">Press your picture a few seconds to exchange</string>
    <string name="main_home">Home</string>
    <string name="manager">Manage</string>
    <string name="square_editor_fill">Fill</string>
    <string name="square_editor_horizontal">FlipH</string>
    <string name="square_editor_inside">Inside</string>
    <string name="square_editor_left">Left</string>
    <string name="square_editor_right">Right</string>
    <string name="square_editor_vertical">FlipV</string>
</resources>