<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/toolsbar_main_color_grey">

    <FrameLayout
        android:id="@+id/square_ui_blur_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom" />

    <FrameLayout
        android:id="@+id/square_ui_editor_blur_adjust_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom">

        <LinearLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/item_fill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/rl_fill_image"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_fill"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/square_editor_fill"
                            app:tint="@color/item_text_color_pressable" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_fill_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_below="@+id/rl_fill_image"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_fill"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/square_editor_fill"
                            android:textColor="@color/item_text_color_pressable"
                            android:textSize="8sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_square"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/rl_inside_image"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_inside"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/square_editor_inside"
                            app:tint="@color/item_text_color_pressable" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_inside_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_below="@+id/rl_inside_image"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_inside"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/square_editor_inside"
                            android:textColor="@color/item_text_color_pressable"
                            android:textSize="8sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/rl_fliph_image"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_fliph"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/square_editor_fliph"
                            app:tint="@color/item_text_color_pressable" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_fliph_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_below="@+id/rl_fliph_image"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_fliph"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/square_editor_horizontal"
                            android:textColor="@color/item_text_color_pressable"
                            android:textSize="8sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_vertial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/rl_flipv_image"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_flipv"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/square_editor_flipv"
                            app:tint="@color/item_text_color_pressable" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_flipv_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_below="@+id/rl_flipv_image"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_flipv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/square_editor_vertical"
                            android:textColor="@color/item_text_color_pressable"
                            android:textSize="8sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/rl_left_image"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_left"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/square_editor_roatte_left"
                            app:tint="@color/item_text_color_pressable" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_left_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_below="@+id/rl_left_image"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/square_editor_left"
                            android:textColor="@color/item_text_color_pressable"
                            android:textSize="8sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/rl_right_image"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_right"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/square_editor_rotate_right"
                            app:tint="@color/item_text_color_pressable" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_right_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_below="@+id/rl_right_image"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txt_right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/square_editor_right"
                            android:textColor="@color/item_text_color_pressable"
                            android:textSize="8sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
